--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,17 @@
 		    <version>3.11.6</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.17.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.17.0</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
